--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -11,5 +11,15 @@
 <body>
     <h1>Widgets</h1>
     <hr>
+    {% if widgets|length == 0 %}
+        <p>No Widgets Exist</p>
+    {% else %}
+        <ul>
+            {% for widget in widgets %}
+                <li>{{ widget }}</li>
+            {% endfor %}
+        </ul>
+    {% endif %}
+    <hr>
 </body>
 </html>
