--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -7,6 +7,11 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Assessment 3</title>
   <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" integrity="sha384-nn4HPE8lTHyVtfCBi5yW9d20FjT8BJwUXyWZT9InLYax14RDjBj46LmSztkmNP9w" crossorigin="anonymous">
+  <style>
+    table {margin: 2rem auto;}
+    table a {color: red;
+    text-decoration: none;}
+  </style>
 </head>
 <body>
     <h1>Widgets</h1>
